--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next-auth/firebase-adapter": "^2.0.1",
+    "firebase": "^12.7.0",
+    "googleapis": "^169.0.0",
     "next": "16.1.0",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
